--- a/src/reset.css
+++ b/src/reset.css
@@ -45,3 +45,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+* {
+	box-sizing: border-box;
+}
+
+body {
+	background: #F8F9FB;
+}
